environments/gloo-gateway/gateway-api/live/homer-app/base/howto/admin/homer-howto-admin-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: homer-howto-admin-httproute
  namespace: homer-portal
  labels:
    example: homer-route
    gateway: https
spec:
  hostnames:
  - "demo.glooplatform.com"
  - "demo.gwapi.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - matches:
      - path:
          type: Exact
          value: /howto/admin
      filters:
      - type: ExtensionRef
        extensionRef:
         name: howto-admin-direct-response
         group: gateway.gloo.solo.io
         kind: DirectResponse
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: homer-howto-admin-route-policies
